tdf#153728 Can't assign macro to autotext

regression from
    commit b8f932e1df1efb230230ab1f1b9c8cfc822a0f4c
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu Jan 9 12:01:55 2020 +0200
    convert XMLAutoTextEventImport to FastParser APIs

Change-Id: I924c2c95a258917b0003171b71c23a65a6b623d3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147399
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>